--- a/html.html
+++ b/html.html
@@ -13,7 +13,7 @@
 
     <script>
       // Create a new WebSocket connection
-      const socket = new WebSocket("ws://localhost:8080");
+      const socket = new WebSocket("wss://sherbazaar-websocket.onrender.com");
 
       socket.addEventListener("open", (event) => {
         console.log("connected to server");
